prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/base_as_array_assign.diag.txt
ERROR: can't assign to expression
testData/diagnostics/base_as_array_assign.nut:1:0

base["x"] = 1
^--------


